import React from "react";
import { render, waitFor } from "@testing-library/react";
import MockDate from "mockdate";
import TaskTile from "../components/TaskTile";
import {
  mockCompletedTaskTileData,
  mockPendingTaskTileData,
  mockTaskTileDataForGroupedTask,
  mockCompletedPRNTaskTileData,
  mockPendingPRNTaskTileData,
  mockNonMedicationTileData,
  mockStoppedNonMedicationTileData,
} from "./NursingTasksUtilsMockData";
import {
  mockConfig,
  mockConfigFor12HourFormat,
} from "../../../../utils/CommonUtils";
import { IPDContext } from "../../../../context/IPDContext";
import { IntlProvider } from "react-intl";
import { NURSING_ACTIVITY_SYSTEM } from "../../../../constants";

describe("TaskTile", () => {
  beforeEach(() => {
    MockDate.set("2023-08-11");
  });

  afterEach(() => {
    MockDate.reset();
  });
  it("should match the snapshot for non grouped task", () => {
    const { asFragment } = render(
      <IntlProvider locale="en">
        <IPDContext.Provider value={{ config: mockConfig }}>
          <TaskTile medicationNursingTask={mockCompletedTaskTileData} />
        </IPDContext.Provider>
      </IntlProvider>
    );
    expect(asFragment()).toMatchSnapshot();
  });

  it("should match the snapshot for grouped task", async () => {
    const { asFragment, getByText } = render(
      <IntlProvider locale="en">
        <IPDContext.Provider value={{ config: mockConfig }}>
          <TaskTile medicationNursingTask={mockTaskTileDataForGroupedTask} />
        </IPDContext.Provider>
      </IntlProvider>
    );

    await waitFor(() => {
      expect(asFragment()).toMatchSnapshot();
      expect(getByText("(1 more task(s))")).toBeTruthy();
    });
  });

  it("should disable tile when task is completed", () => {
    const { container, getByTestId } = render(
      <IntlProvider locale="en">
        <IPDContext.Provider value={{ config: mockConfig }}>
          <TaskTile medicationNursingTask={mockCompletedTaskTileData} />
        </IPDContext.Provider>
      </IntlProvider>
    );

    const completedTile = container.querySelector(".disabled-tile");
    const administeredIcon = getByTestId("Administered");

    expect(completedTile).toBeTruthy();
    expect(administeredIcon).toBeTruthy();
  });

  it("should render pending icon when task is not administered", () => {
    const { getByTestId } = render(
      <IntlProvider locale="en">
        <IPDContext.Provider value={{ config: mockConfig }}>
          <TaskTile medicationNursingTask={mockPendingTaskTileData} />
        </IPDContext.Provider>
      </IntlProvider>
    );

    const pendingIcon = getByTestId("Pending");

    expect(pendingIcon).toBeTruthy();
  });

  it("should render placeholder Rx- PRN task with pending icon", () => {
    const { getByTestId, getByText } = render(
      <IntlProvider locale="en">
        <IPDContext.Provider value={{ config: mockConfig }}>
          <TaskTile medicationNursingTask={mockPendingPRNTaskTileData} />
        </IPDContext.Provider>
      </IntlProvider>
    );
    const pendingIcon = getByTestId("Pending");
    expect(pendingIcon).toBeTruthy();
    expect(getByText("Rx-PRN")).toBeTruthy();
  });

  it("should render administered PRN task with time and Rx-PRN tag", () => {
    const { getByTestId, getByText } = render(
      <IntlProvider locale="en">
        <IPDContext.Provider value={{ config: mockConfig }}>
          <TaskTile medicationNursingTask={mockCompletedPRNTaskTileData} />
        </IPDContext.Provider>
      </IntlProvider>
    );
    const administeredIcon = getByTestId("Administered-Late");
    expect(administeredIcon).toBeTruthy();
    expect(getByText("Rx-PRN")).toBeTruthy();
    expect(getByText(/16:38 - .* \(actual\)/)).toBeTruthy();
  });

  it("should render administered PRN task with time and Rx-PRN tag when time in 12 hour format", () => {
    const { getByTestId, getByText } = render(
      <IntlProvider locale="en">
        <IPDContext.Provider value={{ config: mockConfigFor12HourFormat }}>
          <TaskTile medicationNursingTask={mockCompletedPRNTaskTileData} />
        </IPDContext.Provider>
      </IntlProvider>
    );
    const administeredIcon = getByTestId("Administered-Late");
    expect(administeredIcon).toBeTruthy();
    expect(getByText("Rx-PRN")).toBeTruthy();
    expect(getByText(/04:38 PM - .* \(actual\)/)).toBeTruthy();
  });

  it("should render stopped icon when non-medication task status is Stopped", () => {
    const { getByTestId } = render(
      <IntlProvider locale="en">
        <IPDContext.Provider value={{ config: mockConfig }}>
          <TaskTile medicationNursingTask={mockStoppedNonMedicationTileData} />
        </IPDContext.Provider>
      </IntlProvider>
    );
    expect(getByTestId("Stopped")).toBeTruthy();
  });

  it("should dislay provider name in the non-medication task tile", () => {
    const { getByText } = render(
      <IntlProvider locale="en">
        <IPDContext.Provider value={{ config: mockConfigFor12HourFormat }}>
          <TaskTile medicationNursingTask={mockNonMedicationTileData} />
        </IPDContext.Provider>
      </IntlProvider>
    );
    expect(getByText("bailly rurangirwa")).toBeTruthy();
  });

  it("should render a form hyperlink for system generated tasks", () => {
    const formLinkTaskData = [
      {
        drugName: "Complete Nursing Initial Assessment Form",
        dosage: null,
        doseType: null,
        drugRoute: null,
        startTime: "10:00",
        startTimeInEpochSeconds: 1702650600,
        dosingInstructions: null,
        stopTime: null,
        isDisabled: false,
        administeredTimeInEpochSeconds: null,
        serviceType: "NonMedicationRequest",
        isANonMedicationTask: true,
        creator: { display: "superman" },
        taskType: { display: NURSING_ACTIVITY_SYSTEM },
      },
    ];

    const { container, getByRole } = render(
      <IntlProvider locale="en">
        <IPDContext.Provider value={{ config: mockConfig }}>
          <TaskTile
            medicationNursingTask={formLinkTaskData}
            formUuid="form-uuid-123"
            patientId="patient-uuid-123"
          />
        </IPDContext.Provider>
      </IntlProvider>
    );

    const link = getByRole("link", {
      name: "Complete Nursing Initial Assessment Form",
    });

    expect(link).toBeTruthy();
    expect(container.querySelector("a.task-form-link")).toHaveAttribute(
      "href",
      "/bahmni/clinical/index.html#/default/patient/patient-uuid-123/dashboard/concept-set-group/observations/form/form-uuid-123"
    );
  });

  it("should render intradayDoseString instead of separate dosage/doseType/drugRoute when intradayDoseString is set", () => {
    const intradayTaskData = [
      {
        drugName: "Prednisolone",
        drugRoute: "Oral",
        duration: "5 Day(s)",
        dosage: null,
        doseType: "mg",
        uuid: "intraday-task-uuid",
        startTimeInEpochSeconds: 1703601000,
        startTime: "08:00",
        orderId: "intraday-order-uuid",
        isDisabled: false,
        intradayDoseString: "10-0-30-10 mg - Oral - for 5 Day(s)",
      },
    ];

    const { getByText } = render(
      <IntlProvider locale="en">
        <IPDContext.Provider value={{ config: mockConfig }}>
          <TaskTile medicationNursingTask={intradayTaskData} />
        </IPDContext.Provider>
      </IntlProvider>
    );

    expect(getByText("10-0-30-10 mg - Oral - for 5 Day(s)")).toBeTruthy();
  });
});
