// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskTile should match the snapshot for grouped task 1`] = `
<DocumentFragment>
  <div
    class="tile-parent-container"
  >
    <div
      class="nursing-tasks-tile false
        "
    >
      <div
        class="tile-content"
      >
        <div
          class="tile-title undefined"
        >
          <div>
            <div
              class="nursing-task-icon-container"
              data-testid="Late"
            >
              <div>
                <test-file-stub />
              </div>
            </div>
            <span
              class="bx--tooltip--definition bx--tooltip--a11y cursor-pointer"
            >
              <button
                aria-describedby="definition-tooltip-2"
                class="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
                type="button"
              >
                <span
                  class="drug-title"
                  style="color: rgb(82, 82, 82); font-weight: 400;"
                >
                  Paracetamol 120 mg/5 mL Suspension (Liquid)
                </span>
              </button>
              <span
                class="bx--assistive-text"
                id="definition-tooltip-2"
                role="tooltip"
              >
                Paracetamol 120 mg/5 mL Suspension (Liquid)
              </span>
            </span>
          </div>
          <div
            class="tile-name-cell"
          />
        </div>
        <div
          class="tile-content-subtext"
          style="color: rgb(82, 82, 82); padding-left: 25px;"
        >
          <span>
            25
          </span>
          <span>
             - mg
          </span>
          <span>
             - Oral
          </span>
        </div>
        <div
          class="tile-content-footer"
        >
          <div
            class="tile-date-time"
          >
            <div
              class="date-time-container"
            >
              <div
                class="date-row"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                </svg>
                <span
                  class="tile-content-subtext-date"
                >
                   01 August 2023
                </span>
              </div>
              <div
                class="time-row"
              >
                <test-file-stub />
                <div
                  class="tile-content-subtext-time"
                >
                   16:15
                </div>
              </div>
            </div>
          </div>
          <div
            class="footer-right-section"
          >
            <span
              class="grouped-task-count"
            >
              (1 more task(s))
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="nursing-tasks-tile stacked-tile false"
    />
  </div>
</DocumentFragment>
`;

exports[`TaskTile should match the snapshot for non grouped task 1`] = `
<DocumentFragment>
  <div
    class="tile-parent-container"
  >
    <div
      class="nursing-tasks-tile false
        disabled-tile"
    >
      <div
        class="tile-content"
      >
        <div
          class="tile-title undefined"
        >
          <div>
            <div
              class="nursing-task-icon-container"
              data-testid="Administered"
            >
              <div>
                <test-file-stub />
              </div>
            </div>
            <span
              class="bx--tooltip--definition bx--tooltip--a11y cursor-not-allowed"
            >
              <button
                aria-describedby="definition-tooltip-1"
                class="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
                type="button"
              >
                <span
                  class="drug-title"
                  style="color: rgb(82, 82, 82); font-weight: 400;"
                >
                  Halothane/Fluothane 250 mL Inhalation Anesthetic Liquid
                </span>
              </button>
              <span
                class="bx--assistive-text"
                id="definition-tooltip-1"
                role="tooltip"
              >
                Halothane/Fluothane 250 mL Inhalation Anesthetic Liquid
              </span>
            </span>
          </div>
          <div
            class="tile-name-cell"
          />
        </div>
        <div
          class="tile-content-subtext"
          style="color: rgb(82, 82, 82); padding-left: 25px;"
        >
          <span>
            1ml
          </span>
          <span>
             - Oral
          </span>
        </div>
        <div
          class="tile-content-footer"
        >
          <div
            class="tile-date-time"
          >
            <div
              class="date-time-container"
            >
              <div
                class="date-row"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                </svg>
                <span
                  class="tile-content-subtext-date"
                >
                   26 December 2023
                </span>
              </div>
              <div
                class="time-row"
              >
                <test-file-stub />
                <div
                  class="tile-content-subtext-time"
                >
                   16:00 - 07:23 (actual)
                </div>
              </div>
            </div>
          </div>
          <div
            class="footer-right-section"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
